Made a blank window. Working on window size.

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -65,9 +65,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ClientMain.h" />
+    <ClInclude Include="windowMain.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ClientMain.cpp" />
+    <ClCompile Include="windowMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
